# llmscope

./: .gitignore  CHANGELOG.md  README.md  llm-otel-book.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.kiro/specs/001-reference-app/: design.md  spec.md  tasks.md
.kiro/specs/002-gateway/: design.md  spec.md  tasks.md
.kiro/specs/003-eval-harness/: design.md  spec.md  tasks.md
.kiro/specs/004-reporting/: design.md  spec.md  tasks.md
.kiro/specs/005-real-models/: design.md  spec.md  tasks.md
.kiro/specs/006-health-and-ci/: design.md  spec.md  tasks.md
.kiro/specs/007-auth/: design.md  spec.md  tasks.md
.kiro/specs/008-async-retry/: design.md  spec.md  tasks.md
.kiro/specs/009-token-counting/: design.md  spec.md  tasks.md
.kiro/specs/010-envelope/: design.md  spec.md  tasks.md
.kiro/steering/: architecture.md  coding-standards.md  otel.md  product.md  testing.md  workflow.md
app/: main.py
app/routes/: answer_routed.py  conversation_turn.py
evals/runners/: run_answer_routed_eval.py  run_conversation_turn_eval.py
examples/: sample_telemetry.jsonl
src/llmscope/: __init__.py  context.py  envelope.py  semconv.py
src/llmscope/gateway/: __init__.py  client.py  cost_model.py  otel_setup.py  policies.py  provider.py  semconv.py  telemetry.py
tests/: conftest.py  test_context.py  test_context_integration.py  test_envelope.py  test_example_artifacts.py  test_gateway.py  test_routes.py  test_schemas.py  test_semconv.py
