[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscope"
version = "0.1.0"
description = "Observable cost control for production LLMs — gateway-based cost attribution, OpenTelemetry instrumentation, and FinOps reporting"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    # Web framework (used by reference app; not required by core lib)
    "fastapi==0.134.0",
    "uvicorn[standard]==0.41.0",
    "httpx==0.28.1",
    # Data validation
    "pydantic==2.12.5",
    # Token counting
    "tiktoken>=0.7",
    # OpenTelemetry — all packages must be version-locked together.
    # SDK, exporters, and instrumentation are a matched set.
    #   api/sdk:                    1.39.1
    #   exporter-otlp-proto-http:   1.39.1
    #   semantic-conventions:       0.60b1
    #   instrumentation-fastapi:    0.60b1
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-semantic-conventions==0.60b1",
]

[project.optional-dependencies]
openai = ["openai>=2.20,<3.0"]
anthropic = ["anthropic>=0.40,<1.0"]
all = ["openai>=2.20,<3.0", "anthropic>=0.40,<1.0"]
dev = [
    "openai>=2.20,<3.0",
    "anthropic>=0.40,<1.0",
    "pytest==9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.13",
]

# ── Setuptools package discovery ──────────────────────────────────────────────
# Declare all importable packages explicitly so the editable install works
# without scanning directories that contain non-package content.
[tool.setuptools.packages.find]
where = ["src"]
include = ["llmscope*"]
exclude = ["tests*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
exclude = [".venv", ".venv_test", ".venv*", ".git", "__pycache__", "artifacts", "*.egg-info"]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort, UP = pyupgrade
# W = pycodestyle warnings, B = flake8-bugbear, C4 = flake8-comprehensions
select = ["E", "F", "I", "UP", "W", "B", "C4"]
# B008: function call in default argument — unavoidable in FastAPI Field(default_factory=...)
# B904: raise ... from ... — would require changes in error handling layers not yet hardened
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
# Packages checked: all importable application code.
# tests/ and scripts/ are not declared packages; they are checked
# via explicit include in CI using --explicit-package-bases.
packages = ["llmscope"]

# Strictness — moderate: catches real bugs without drowning in framework noise.
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

# Third-party stubs are incomplete; suppress missing-import noise.
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
# Treat all ResourceWarnings as errors to catch unclosed file handles in tests.
filterwarnings = [
    "error::ResourceWarning",
    # fastapi/starlette use deprecated asyncio APIs on older Python; suppress
    # until upstream fixes.
    "ignore::DeprecationWarning:anyio",
    "ignore::DeprecationWarning:starlette",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that require external services",
]
