[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscope"
version = "0.1.0"
description = "Observable cost control for production LLMs — gateway-based cost attribution, OpenTelemetry instrumentation, and FinOps reporting"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    # Data validation
    "pydantic>=2.10",
    # Token counting
    "tiktoken>=0.7",
    # OpenTelemetry core
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
]

[project.optional-dependencies]
# LLM provider SDKs — install only what you need
openai = ["openai>=2.20,<3.0"]
anthropic = ["anthropic>=0.40,<1.0"]
all = ["openai>=2.20,<3.0", "anthropic>=0.40,<1.0"]
# Reference app (FastAPI demo routes, evals, reporting)
ref = [
    "fastapi>=0.134",
    "uvicorn[standard]>=0.41",
    "httpx>=0.28",
    "opentelemetry-instrumentation-fastapi==0.60b1",
]
dev = [
    "openai>=2.20,<3.0",
    "anthropic>=0.40,<1.0",
    "fastapi>=0.134",
    "uvicorn[standard]>=0.41",
    "httpx>=0.28",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "pytest==9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.13",
]

# ── Setuptools package discovery ─────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
include = ["llmscope*"]
exclude = ["tests*"]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
exclude = [
    ".venv", ".venv_test", ".venv*", ".git",
    "__pycache__", "artifacts", "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "C4"]
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── Mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
packages = ["llmscope"]
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
# OTel SDK and semconv packages lack complete type stubs.
# Required for py.typed compliance with current dependency set.
# Remove when opentelemetry-api ships inline types.
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "error::ResourceWarning",
    "ignore::DeprecationWarning:anyio",
    "ignore::DeprecationWarning:starlette",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that require external services",
]
